Add thanks to Vesselin Velichkov

--- a/txfig.sty
+++ b/txfig.sty
@@ -1,3 +1,6 @@
+% Many thanks to Vesselin Velichkov for
+% providing an example of a particular transaction
+
 \ProvidesPackage{txfig}
 
 \ExplSyntaxOn
