Change tx node name

--- a/txfig.sty
+++ b/txfig.sty
@@ -84,7 +84,7 @@
   \setlength{\txboxvoffset}{\calc{\maxinouts * \inoutheight} + \calc{3 * \txboxmargin}}
 
   \rput(0,0,0) {
-    \pnode{m_btc} {
+    \pnode{tx} {
       % inputs
       \foreach \input [count=\index] in {#2} {
         \expandafter\prepareinput\expandafter{\input}
