--- a/txfig.sty
+++ b/txfig.sty
@@ -27,9 +27,7 @@
 % #1: position
 % #2: node name
 % #3: text string
-\def\pstext(#1)(#2)(#3){
-    \rput(#1){\rnode{#2}{{#3}}}
-}
+\NewDocumentCommand{\pstext}{mmm}{\rput(#1){\rnode{#2}{{#3}}}}
 
 % Text within a frame of fixed size i.e.
 % Size of the frame does not depend on the text
@@ -42,15 +40,15 @@
 \def\textpolygon(#1,#2)(#3,#4)(#5)(#6)(#7) {
   \rput(#1,#2){
     \pspolygon[fillstyle=solid,fillcolor=#5](-#3,-#4)(#3,-#4)(#3,#4)(-#3,#4)
-    \pstext(0,0)(#6)(#7)
+    \pstext{0,0}{#6}{#7}
   }
 }
 
 \NewDocumentCommand{\drawinput}{mm}{
   \rput(\calc{-\txinoffset-\txboxhoffset}pt, \calc{\index - (0.5 * \inputsno) - \inoutheight/35}){#1}
   \rput(\calc{-\txinoffset-\txboxhoffset}pt, \calc{\index - (0.5 * \inputsno) - 3*\inoutheight/35}){#2}
-  \pstext(\calc{-\txinoffset*2-\txboxhoffset}pt, \calc{\index - (0.5 * \inputsno) - 2*\inoutheight/35})(n_input_\index_from)($$)
-  \pstext(-\txboxhoffset, \calc{\index - (0.5 * \inputsno) - 2*\inoutheight/35})(n_input_\index_to)($$)
+  \pstext{\calc{-\txinoffset*2-\txboxhoffset}pt, \calc{\index - (0.5 * \inputsno) - 2*\inoutheight/35}}{n_input_\index_from}{$$}
+  \pstext{-\txboxhoffset, \calc{\index - (0.5 * \inputsno) - 2*\inoutheight/35}}{n_input_\index_to}{$$}
   \ncline[nodesepA=0.0,nodesepB=0.0,arrowsize=4pt]{->}
     {n_input_\index_from}{n_input_\index_to}
 }
@@ -59,8 +57,8 @@
 \NewDocumentCommand{\drawoutput}{mm}{
   \rput(\calc{\txoutoffset+\txboxhoffset}pt, \calc{\index - (0.5 * \outputsno) - \inoutheight/35}){#1} % TODO: smarter y coordinates?
   \rput(\calc{\txoutoffset+\txboxhoffset}pt, \calc{\index - (0.5 * \outputsno) - 3*\inoutheight/35}){#2}
-  \pstext(\txboxhoffset, \calc{\index - (0.5 * \outputsno) - 2*\inoutheight/35})(n_output_\index_from)($$)
-  \pstext(\calc{\txoutoffset*2+\txboxhoffset}pt, \calc{\index - (0.5 * \outputsno) - 2*\inoutheight/35})(n_output_\index_to)($$)
+  \pstext{\txboxhoffset, \calc{\index - (0.5 * \outputsno) - 2*\inoutheight/35}}{n_output_\index_from}{$$}
+  \pstext{\calc{\txoutoffset*2+\txboxhoffset}pt, \calc{\index - (0.5 * \outputsno) - 2*\inoutheight/35}}{n_output_\index_to}{$$}
   \ncline[nodesepA=0.0,nodesepB=0.0,arrowsize=4pt]{->}
     {n_output_\index_from}{n_output_\index_to}
 }
