--- a/txfig.sty
+++ b/txfig.sty
@@ -69,7 +69,7 @@
 % #1: text inside box e.g. "tx name"
 % #2: inputs
 % #3: outputs
-\def\btc(#1)(#2)(#3){
+\def\drawtx(#1)(#2)(#3){
   \newlength{\txinoffset}
   \setmaxlength{\txinoffset}{#2}
 
