--- a/example.tex
+++ b/example.tex
@@ -14,7 +14,7 @@
 \begin{document}
 \begin{figure}
 \begin{pspicture}
-  \drawbox(10.0,-5,0)(n_btc)(tx name)(
+  \drawtx(10.0,-5,0)(n_btc)(tx name)(
     {$\mathrm{prevTx}_1$,$\mathrm{prevOut}_1$},{$\mathrm{prevTx}_2$,$\mathrm{prevOut}_2$}%
   )(
     {lala,lolo},{bli,blo},{adsf,asfd},{$\mathrm{multisig}(2{,}A{,}B)$,$42$~btc}%
