Add newlines to example
Just to show it's possible

--- a/example.tex
+++ b/example.tex
@@ -15,9 +15,13 @@
 \begin{figure}
 \begin{pspicture}
   \drawtx(tx name)(
-    {$\mathrm{prevTx}_1$,$\mathrm{prevOut}_1$},{$\mathrm{prevTx}_2$,$\mathrm{prevOut}_2$}%
+    {$\mathrm{prevTx}_1$,$\mathrm{prevOut}_1$},
+    {$\mathrm{prevTx}_2$,$\mathrm{prevOut}_2$}%
   )(
-    {lala,lolo},{bli,blo},{adsf,asfd},{$\mathrm{multisig}(2{,}A{,}B)$,$42$~btc}%
+    {lala,lolo},
+    {bli,blo},
+    {adsf,asfd},
+    {$\mathrm{multisig}(2{,}A{,}B)$,$42$~btc}%
   )
 \end{pspicture}
 \end{figure}
