Adapt and enrich example

--- a/example.tex
+++ b/example.tex
@@ -18,13 +18,20 @@
 \begin{figure}
 \begin{pspicture}
   \drawtx(tx name)(
-    {$\mathrm{prevTx}_1$,$\mathrm{prevOut}_1$},
-    {$\mathrm{prevTx}_2$,$\mathrm{prevOut}_2$}%
+    {{$\mathrm{prevTx}_1$,asdf},{$\mathrm{prevOut}_1$}},
+    {{$\mathrm{prevTx}_1$,asdf},{$\mathrm{prevOut}_1$}},
+    %{{ukjyhn,rtb}}, not allowed
+    {{ukjyhn,rtb},{}},
+    {{},{udfae,raweg}},
+    {{$\mathrm{prevTx}_1$,asdf},{$\mathrm{prevOut}_1$}},
+    {{$\mathrm{prevTx}_3$},{$\mathrm{prevOut}_6$,fdas}},
+    {{$\mathrm{prevTx}_2$},{$\mathrm{prevOut}_2$,d,d}}%
   )(
-    {lala,lolo},
-    {bli,blo},
-    {adsf,asfd},
-    {$\mathrm{multisig}(2{,}A{,}B)$,$42$~btc}%
+    {{lala},{lolo}},
+    {{bli},{blo}},
+    {{adsf},{asfd}},
+    {{adsf},{asfd}},
+    {{$\mathrm{multisig}(2{,}A{,}B)$},{$42$~btc}}%
   )
 \end{pspicture}
 \end{figure}
