--- a/txfig.sty
+++ b/txfig.sty
@@ -118,15 +118,47 @@
   }
 }
 
-\NewDocumentCommand{\drawoutput}{mm}{
-  \rput(\calc{\outHorOffset+\boxHorOffset}pt, \calc{\index - (0.5 * \outputsno) - \inoutheight/35}){#1} % TODO: smarter y coordinates?
-  \rput(\calc{\outHorOffset+\boxHorOffset}pt, \calc{\index - (0.5 * \outputsno) - 3*\inoutheight/35}){#2}
-  \pstext{\boxHorOffset, \calc{\index - (0.5 * \outputsno) - 2*\inoutheight/35}}{n_output_\index_from}{$$}
-  \pstext{\calc{\outHorOffset*2+\boxHorOffset}pt, \calc{\index - (0.5 * \outputsno) - 2*\inoutheight/35}}{n_output_\index_to}{$$}
+\NewDocumentCommand{\drawOutArrow}{}{
+  \pstext{
+    \calc{\outHorOffset*2 + \boxHorOffset}pt,
+    \calc{\outVertOffset -
+      (\count + \arrowcorrection) * \baselineskip}pt
+  }{n_output_\arrindex_to}{$$}
+  \pstext{
+    \boxHorOffset,
+    \calc{\outVertOffset -
+      (\count + \arrowcorrection) * \baselineskip}pt
+  }{n_output_\arrindex_from}{$$}
   \ncline[nodesepA=0.0,nodesepB=0.0,arrowsize=4pt]{->}
-    {n_output_\index_from}{n_output_\index_to}
+    {n_output_\arrindex_from}{n_output_\arrindex_to}
 }
-\NewDocumentCommand{\prepareoutput}{>{\SplitList{,}}m}{\drawoutput#1}
+
+\NewDocumentCommand{\drawOutputs}{m}{
+  \gdef\count{0.5}
+
+  \foreach \arrow [count=\arrindex] in {#1} {
+    \gdef\arrowcorrection{-2}
+    \foreach \blob [count=\blobindex] in \arrow {
+      \foreach \line [count=\lineindex] in \blob {
+        \rput(
+          \calc{\outHorOffset + \boxHorOffset}pt,
+          \calc{\outVertOffset - \count * \baselineskip}pt
+        ){\line}
+        \ifthenelse{\blobindex=2}{
+          \FPsub{\aux}{\arrowcorrection}{1}
+          \global\let\arrowcorrection\aux%
+        }{}
+        \FPadd{\aux}{\count}{1}
+        \global\let\count\aux%
+      }
+      \FPadd{\aux}{\count}{1}
+      \global\let\count\aux%
+    }
+    \drawOutArrow
+    \FPadd{\aux}{\count}{1}
+    \global\let\count\aux%
+  }
+}
 % -------- draw nodes - end -----------
 
 % -------- API ------------
@@ -154,10 +186,6 @@
   \newlength{\boxVertOffset}
   \setlength{\boxVertOffset}{\maxof{\inVertOffset}{\outVertOffset}}
 
-  \foreach \input [count=\outidx] in {#3} {
-    \gdef\outputsno{\outidx} %TODO: remove
-  }
-
   \rput(0,0,0){
     \pnode{tx}{
       % inputs
@@ -165,9 +193,7 @@
       % box
       \textpolygon(0.0,0.0)(\boxHorOffset,\boxVertOffset)(white)(n_box)({#1})
       % outputs
-      \foreach \output [count=\index] in {#3} {
-        \expandafter\prepareoutput\expandafter{\output}
-      }
+      \drawOutputs{#3}
     }
   }
 }
