Replace \def{}s with \NewDocumentCommand{}s

--- a/example.tex
+++ b/example.tex
@@ -17,8 +17,7 @@
 \begin{document}
 \begin{figure}
 \begin{pspicture}
-  \drawtx(tx name)(
-    {{$\mathrm{prevTx}_1$,asdf},{$\mathrm{prevOut}_1$}},
+  \drawtx{tx name}{
     {{$\mathrm{prevTx}_1$,asdf},{$\mathrm{prevOut}_1$}},
     %{{ukjyhn,rtb}}, not allowed
     {{ukjyhn,rtb},{}},
@@ -26,13 +25,13 @@
     {{$\mathrm{prevTx}_1$,asdf},{$\mathrm{prevOut}_1$}},
     {{$\mathrm{prevTx}_3$},{$\mathrm{prevOut}_6$,fdas}},
     {{$\mathrm{prevTx}_2$},{$\mathrm{prevOut}_2$,d,d}}%
-  )(
+  }{
     {{lala},{lolo}},
     {{bli},{blo}},
     {{adsf},{asfd}},
     {{adsf},{asfd}},
     {{$\mathrm{multisig}(2{,}A{,}B)$},{$42$~btc}}%
-  )
+  }
 \end{pspicture}
 \end{figure}
 \end{document}
