--- a/txfig.sty
+++ b/txfig.sty
@@ -4,8 +4,8 @@
 \ProvidesPackage{txfig}
 
 % ------- constants - start -----------
-\NewDocumentCommand{\txboxmargin}{}{7}
-\NewDocumentCommand{\arrtextmargin}{}{9}
+\NewDocumentCommand{\txboxmargin}{}{5}
+\NewDocumentCommand{\arrtextmargin}{}{8}
 % -------- constants - end ------------
 
 % "make calc work" magic
@@ -31,6 +31,7 @@
   {\calc{#1 * \baselineskip / 2} + \txboxmargin}
 
 \NewDocumentCommand{\setToMaxLength}{mm}{
+  \gsetlength{#1}{0}
   \foreach \pair in {#2} {
     \foreach \blob in \pair {
       \foreach \line in \blob {
@@ -47,7 +48,7 @@
 
 \NewDocumentCommand{\countLinesOfArrow}{mm}{
   \forcsvlist{\countLinesOfBlob{#1}}{#2}
-  \FPadd{#1}{#1}{2}
+  \FPadd{#1}{#1}{1}
 }
 
 \NewDocumentCommand{\countLines}{mm}{
@@ -81,20 +82,20 @@
 \NewDocumentCommand{\drawInArrow}{}{
   \pstext{
     \calc{-\inHorOffset - \boxHorOffset - \arrtextmargin * 2}pt,
-    \calc{\inVertOffset -
-      (\count + \arrowcorrection) * \baselineskip}pt
+    \calc{\inVertOffset - \txboxmargin - \baselineskip / 2 -
+      (\count + \arrowcorrection) * \baselineskip / 2}pt
   }{n_input_\arrindex_from}{$$}
   \pstext{
     -\boxHorOffset,
-    \calc{\inVertOffset -
-      (\count + \arrowcorrection) * \baselineskip}pt
+    \calc{\inVertOffset - \txboxmargin - \baselineskip / 2 -
+      (\count + \arrowcorrection) * \baselineskip / 2}pt
   }{n_input_\arrindex_to}{$$}
   \ncline[nodesepA=0.0,nodesepB=0.0,arrowsize=4pt]{->}
     {n_input_\arrindex_from}{n_input_\arrindex_to}
 }
 
 \NewDocumentCommand{\drawInputs}{m}{
-  \gdef\count{1}
+  \gdef\count{0}
 
   \foreach \arrow [count=\arrindex] in {#1} {
     \gdef\arrowcorrection{-2}
@@ -102,7 +103,8 @@
       \foreach \line [count=\lineindex] in \blob {
         \rput(
           \calc{- \arrtextmargin - \inHorOffset / 2 - \boxHorOffset}pt,
-          \calc{\inVertOffset - \count * \baselineskip}pt
+          \calc{\inVertOffset - \baselineskip / 2
+            - \txboxmargin - \count * \baselineskip / 2}pt
         ){\line}
         \ifthenelse{\blobindex=2}{
           \FPsub{\aux}{\arrowcorrection}{1}
@@ -115,26 +117,28 @@
       \global\let\count\aux
     }
     \drawInArrow
+    \FPadd{\aux}{\count}{2}
+    \global\let\count\aux
   }
 }
 
 \NewDocumentCommand{\drawOutArrow}{}{
   \pstext{
     \calc{\outHorOffset + \boxHorOffset + \arrtextmargin * 2}pt,
-    \calc{\outVertOffset -
-      (\count + \arrowcorrection) * \baselineskip}pt
+    \calc{\outVertOffset - \txboxmargin - \baselineskip / 2 -
+      (\count + \arrowcorrection) * \baselineskip / 2}pt
   }{n_output_\arrindex_to}{$$}
   \pstext{
     \boxHorOffset,
-    \calc{\outVertOffset -
-      (\count + \arrowcorrection) * \baselineskip}pt
+    \calc{\outVertOffset - \txboxmargin - \baselineskip / 2 -
+      (\count + \arrowcorrection) * \baselineskip / 2}pt
   }{n_output_\arrindex_from}{$$}
   \ncline[nodesepA=0.0,nodesepB=0.0,arrowsize=4pt]{->}
     {n_output_\arrindex_from}{n_output_\arrindex_to}
 }
 
 \NewDocumentCommand{\drawOutputs}{m}{
-  \gdef\count{1}
+  \gdef\count{0}
 
   \foreach \arrow [count=\arrindex] in {#1} {
     \gdef\arrowcorrection{-2}
@@ -142,7 +146,8 @@
       \foreach \line [count=\lineindex] in \blob {
         \rput(
           \calc{\arrtextmargin + \outHorOffset / 2 + \boxHorOffset}pt,
-          \calc{\outVertOffset - \count * \baselineskip}pt
+          \calc{\outVertOffset - \baselineskip / 2
+            - \txboxmargin - \count * \baselineskip / 2}pt
         ){\line}
         \ifthenelse{\blobindex=2}{
           \FPsub{\aux}{\arrowcorrection}{1}
@@ -155,6 +160,8 @@
       \global\let\count\aux
     }
     \drawOutArrow
+    \FPadd{\aux}{\count}{2}
+    \global\let\count\aux
   }
 }
 % -------- draw nodes - end -----------
@@ -173,10 +180,12 @@
   \newlength{\boxHorOffset}
   \setlength{\boxHorOffset}{\widthof{#1} / 2 + \txboxmargin}
 
+  \FPset{\inLines}{0}
   \countLines{\inLines}{#2}
   \newlength{\inVertOffset}
   \setlength{\inVertOffset}{\offsetFromLines{\inLines}}
 
+  \FPset{\outLines}{0}
   \countLines{\outLines}{#3}
   \newlength{\outVertOffset}
   \setlength{\outVertOffset}{\offsetFromLines{\outLines}}
