Move package declaration to txfig.sty

--- a/txfig.sty
+++ b/txfig.sty
@@ -3,6 +3,18 @@
 
 \ProvidesPackage{txfig}
 
+\RequirePackage{pstricks}
+\RequirePackage{pst-node}
+\RequirePackage{auto-pst-pdf}
+\RequirePackage{amssymb}
+\RequirePackage{calc}
+\RequirePackage{pgffor}
+\RequirePackage{xparse}
+\RequirePackage{expl3}
+\RequirePackage[nomessages]{fp}
+\RequirePackage{etoolbox}
+\RequirePackage{xifthen}
+
 % ------- constants - start -----------
 \NewDocumentCommand{\txboxmargin}{}{5}
 \NewDocumentCommand{\arrtextmargin}{}{8}
