Write exhaustive documentation

--- a/examples/full.tex
+++ b/examples/full.tex
@@ -6,7 +6,10 @@
 \begin{figure}
 \begin{pspicture}
   \drawtx{tx name}{
-    {{$\mathrm{prevTx}_1$,asdf},{$\mathrm{prevOut}_1$}},
+    {
+      {$\mathrm{prevTx}_1$,asdf},
+      {$\mathrm{prevOut}_1$}%
+    },
     %{{ukjyhn,rtb}}, not allowed
     {{ukjyhn,rtb},{}},
     {{},{udfae,raweg}},
@@ -14,7 +17,7 @@
     {{$\mathrm{prevTx}_3$},{$\mathrm{prevOut}_6$,fdas}},
     {{$\mathrm{prevTx}_2$},{$\mathrm{prevOut}_2$,d,d}}%
   }{
-    {{}},
+    {{}}, % no text around this arrow
     {{lala},{lolo}},
     {{bli},{blo}},
     {{adsf},{asfd}},
